# docs/api/api.yaml
@@ -23,6 +23,9 @@ paths:
       responses:
         '200':
           description: Success
+      security:
+        - api_key:
+            - email
       tags:
         - Email
   '/v1/sites/{site-id}/list/members':
@@ -55,9 +58,17 @@ paths:
       responses:
         '200':
           description: Success
+      security:
+        - api_key:
+            - email
       tags:
         - Mailing List
 components:
+  securitySchemes:
+    api_key:
+      type: apiKey
+      in: header
+      name: Authorization
   schemas:
     SendEmailRequest:
       type: object
