# src/main/kotlin/com/wutsi/email/endpoint/SendController.kt
@@ -2,6 +2,7 @@ package com.wutsi.email.endpoint
 
 import com.wutsi.email.`delegate`.SendDelegate
 import com.wutsi.email.dto.SendEmailRequest
+import org.springframework.security.access.prepost.PreAuthorize
 import org.springframework.web.bind.`annotation`.PostMapping
 import org.springframework.web.bind.`annotation`.RequestBody
 import org.springframework.web.bind.`annotation`.RestController
@@ -12,6 +13,7 @@ public class SendController(
     private val `delegate`: SendDelegate
 ) {
     @PostMapping("/v1/emails")
+    @PreAuthorize(value = "hasAuthority('email')")
     public fun invoke(@Valid @RequestBody request: SendEmailRequest) {
         delegate.invoke(request)
     }
